<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/mood_question" />

        <RadioGroup
            android:id="@+id/mood_choice"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radio_terrible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mood_terrible" />

            <RadioButton
                android:id="@+id/radio_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mood_bad" />

            <RadioButton
                android:id="@+id/radio_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mood_normal" />

            <RadioButton
                android:id="@+id/radio_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mood_good" />

            <RadioButton
                android:id="@+id/radio_marvelous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mood_marvelous" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>